test(core): improve coverage and add e2e hmr tests. Implemented true E2E HMR tests using Playwright

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@ public/js
 **/*.bun
 **/__screenshots__
 
+# Playwright
+test-results/
+playwright-report/
+
 # local improvement tracking (details in ~/.gemini artifacts)
 **/.improvements/
