--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,11 +15,12 @@
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/radiant": "latest",
 		"@ecopages/browser-router": "workspace:*",
+		"@tailwindcss/postcss": "^4.0.0",
 		"remark-gfm": "^4.0.1",
 		"rehype-pretty-code": "^0.14.1",
 		"@rehype-pretty/transformers": "^0.13.2",
 		"shiki": "^3.20.0",
-		"tailwindcss": "^3.4.19"
+		"tailwindcss": "^4.0.0"
 	},
 	"dependencies": {
 		"rehype-raw": "^7.0.0"
