--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 		"build:playground-react": "bun run --filter @ecopages/playground-react build",
 		"start:playground-react": "bun run --filter @ecopages/playground-react start",
 		"preview:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react preview",
+		"watch:dev:playground-react-router": "bun run --elide-lines 0 --filter @ecopages/playground-react-router watch:dev",
+		"hot:dev:playground-react-router": "bun run --elide-lines 0 --filter @ecopages/playground-react-router hot:dev",
+		"dev:playground-react-router": "bun run --elide-lines 0 --filter @ecopages/playground-react-router dev",
+		"build:playground-react-router": "bun run --filter @ecopages/playground-react-router build",
+		"start:playground-react-router": "bun run --filter @ecopages/playground-react-router start",
+		"preview:playground-react-router": "bun run --elide-lines 0 --filter @ecopages/playground-react-router preview",
 		"watch:dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 watch:dev",
 		"hot:dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 hot:dev",
 		"dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 dev",
