--- a/playground/react-router/package.json
+++ b/playground/react-router/package.json
@@ -13,6 +13,7 @@
 		"@ecopages/core": "workspace:*",
 		"@ecopages/radiant": "^0.2.0",
 		"@ecopages/react": "workspace:*",
+		"@ecopages/react-router": "workspace:*",
 		"@ecopages/image-processor": "workspace:*",
 		"@ecopages/postcss-processor": "workspace:*",
 		"tailwindcss": "^3.4.19",
@@ -21,9 +22,7 @@
 	},
 	"dependencies": {
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-aria-components": "^1.6.0",
-		"@tanstack/react-table": "^8.20.6"
+		"react-dom": "^19.0.0"
 	},
 	"overrides": {
 		"@types/react": "^19.0.0",
