feat(react-router): Added layout as part of the config and Improved react router to be a simple plugin for the react integration.

--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -13,10 +13,12 @@
 	"license": "MIT",
 	"type": "module",
 	"exports": {
-		".": "./src/index.ts"
+		".": "./src/index.ts",
+		"./browser": "./browser.ts"
 	},
 	"files": [
-		"src"
+		"src",
+		"browser.ts"
 	],
 	"repository": {
 		"type": "git",
