--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -24,7 +24,8 @@
 		"./react-esm": "./react-esm.ts",
 		"./react-dom-esm": "./react-dom-esm.ts",
 		"./utils/dynamic": "./src/utils/dynamic.ts",
-		"./utils/client-only": "./src/utils/client-only.ts"
+		"./utils/client-only": "./src/utils/client-only.ts",
+		"./router-adapter": "./src/router-adapter.ts"
 	},
 	"repository": {
 		"type": "git",
