--- a/packages/react-router/tsconfig.json
+++ b/packages/react-router/tsconfig.json
@@ -12,6 +12,6 @@
 		"outDir": "./dist",
 		"jsx": "react-jsx"
 	},
-	"include": ["src/**/*"],
+	"include": ["src/**/*", "browser.ts"],
 	"exclude": ["node_modules", "dist"]
 }
