feat(react-router): view transition setup and head morphing improvement

--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -14,7 +14,8 @@
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts",
-		"./browser": "./browser.ts"
+		"./browser": "./browser.ts",
+		"./styles.css": "./src/styles.css"
 	},
 	"files": [
 		"src",
