--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -39,12 +39,16 @@
 		"@ecopages/core": "workspace:*"
 	},
 	"devDependencies": {
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0"
+		"@types/react": "^19",
+		"@types/react-dom": "^19"
 	},
 	"dependencies": {
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^19",
+		"react-dom": "^19",
 		"@ecopages/logger": "latest"
+	},
+	"overrides": {
+		"react": "^19",
+		"react-dom": "canary"
 	}
 }
