feat(browser-router): added browser router playground

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
 		"build:playground-react-router": "bun run --filter @ecopages/playground-react-router build",
 		"start:playground-react-router": "bun run --filter @ecopages/playground-react-router start",
 		"preview:playground-react-router": "bun run --elide-lines 0 --filter @ecopages/playground-react-router preview",
+		"watch:dev:playground-browser-router": "bun run --elide-lines 0 --filter @ecopages/playground-browser-router watch:dev",
+		"dev:playground-browser-router": "bun run --elide-lines 0 --filter @ecopages/playground-browser-router dev",
+		"build:playground-browser-router": "bun run --filter @ecopages/playground-browser-router build",
+		"start:playground-browser-router": "bun run --filter @ecopages/playground-browser-router start",
+		"preview:playground-browser-router": "bun run --elide-lines 0 --filter @ecopages/playground-browser-router preview",
 		"watch:dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 watch:dev",
 		"hot:dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 hot:dev",
 		"dev:playground-tailwind-v4": "bun run --elide-lines 0 --filter @ecopages/playground-tailwind-v4 dev",
