fix(dependencies): update react-dom version from canary to ^19 across multiple packages

--- a/e2e/fixtures/react-router-app/package.json
+++ b/e2e/fixtures/react-router-app/package.json
@@ -17,10 +17,10 @@
 	},
 	"dependencies": {
 		"react": "^19",
-		"react-dom": "canary"
+		"react-dom": "^19"
 	},
 	"overrides": {
 		"react": "^19",
-		"react-dom": "canary"
+		"react-dom": "^19"
 	}
 }
