--- a/playground/react-router/package.json
+++ b/playground/react-router/package.json
@@ -23,10 +23,10 @@
 	},
 	"dependencies": {
 		"react": "^19",
-		"react-dom": "canary"
+		"react-dom": "^19"
 	},
 	"overrides": {
 		"react": "^19",
-		"react-dom": "canary"
+		"react-dom": "^19"
 	}
 }
