feat(react-router): update version to 0.1.57 and include additional files in publish configuration

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,3 +64,6 @@ jobs:
 
             - name: Publish package @ecopages/browser-router
               run: bun run --filter @ecopages/browser-router release:jsr
+
+            - name: Publish package @ecopages/react-router
+              run: bun run --filter @ecopages/react-router release:jsr
