feat(typecheck): add typecheck script to all package.json files

--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -29,6 +29,7 @@
 		"directory": "packages/browser-router"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
