--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -30,6 +30,7 @@
 		"directory": "packages/integrations/lit"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
