--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -18,6 +18,7 @@
 		"directory": "packages/processors/image-processor"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
