--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"prepare:husky": "husky",
 		"test:browser": "bunx vitest run && bunx playwright test",
 		"test:e2e": "bunx playwright test",
-		"test:e2e:ui": "bunx playwright test --ui"
+		"test:e2e:ui": "bunx playwright test --ui",
+		"typecheck": "bun run --elide-lines 0 --filter '*' typecheck"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
