--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
 		"directory": "packages/core"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
