--- a/packages/plugins/bun-inline-css-plugin/package.json
+++ b/packages/plugins/bun-inline-css-plugin/package.json
@@ -19,6 +19,7 @@
 		"directory": "packages/plugins/bun-inline-css-plugin"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"test": "bun test",
 		"release:jsr": "bunx jsr publish"
 	},
