--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -27,6 +27,7 @@
 		"directory": "packages/react-router"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
