--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -17,5 +17,6 @@
 		"target": "ES2021",
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
-	}
+	},
+	"exclude": ["node_modules"]
 }
