--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ecopages/ecopages",
 	"private": true,
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"scripts": {
 		"watch:dev:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global watch:dev",
 		"hot:dev:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global hot:dev",
@@ -50,7 +50,8 @@
 		"prepare:husky": "husky",
 		"test:browser": "bunx vitest run && bunx playwright test",
 		"test:e2e": "bunx playwright test",
-		"test:e2e:ui": "bunx playwright test --ui"
+		"test:e2e:ui": "bunx playwright test --ui",
+		"typecheck": "bun run --elide-lines 0 --filter '*' typecheck"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
