--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/browser-router",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "Client-side router for Ecopages with view transitions support",
 	"keywords": [
 		"ecopages",
@@ -29,6 +29,7 @@
 		"directory": "packages/browser-router"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
