--- a/packages/file-system/package.json
+++ b/packages/file-system/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/file-system",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "Runtime-agnostic file system utilities for Ecopages with Bun and Node adapters",
 	"keywords": [
 		"ecopages",
@@ -21,6 +21,7 @@
 		"directory": "packages/file-system"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"test": "bun test",
 		"benchmark": "bun run test/benchmark.ts",
 		"release:jsr": "bunx jsr publish"
