--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/lit",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "Ecopages lit integration",
 	"keywords": [
 		"ecopages",
@@ -30,6 +30,7 @@
 		"directory": "packages/integrations/lit"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
