--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/mdx",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "MDX plugin for Ecopages",
 	"keywords": [
 		"ecopages",
@@ -20,6 +20,7 @@
 		"directory": "packages/integrations/mdx"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
