--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/react",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "React integration for Ecopages",
 	"keywords": [
 		"ecopages",
@@ -33,6 +33,7 @@
 		"directory": "packages/integrations/react"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
