--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/image-processor",
-	"version": "0.1.58",
+	"version": "0.1.59",
 	"description": "Image processor, transform and optimize images for web",
 	"keywords": [
 		"image",
@@ -18,6 +18,7 @@
 		"directory": "packages/processors/image-processor"
 	},
 	"scripts": {
+		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
