feat(core): add playground namespace with multiple counter components and integration - testing eco namespace

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
 		"build:playground-global": "bun run --filter @ecopages/playground-global build",
 		"start:playground-global": "bun run --filter @ecopages/playground-global start",
 		"preview:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global preview",
+		"watch:dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace watch:dev",
+		"hot:dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace hot:dev",
+		"dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace dev",
+		"build:playground-namespace": "bun run --filter @ecopages/playground-namespace build",
+		"start:playground-namespace": "bun run --filter @ecopages/playground-namespace start",
+		"preview:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace preview",
 		"watch:dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react watch:dev",
 		"hot:dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react hot:dev",
 		"dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react dev",
