refactor(playground-react): refactor components and pages to use the new eco namespace via codemod

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,7 @@
 	"files": [
 		"src"
 	],
+	"sideEffects": false,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
@@ -37,6 +38,10 @@
 			"import": "./src/index.ts",
 			"require": "./src/index.ts",
 			"types": "./src/public-types.ts"
+		},
+		"./eco": {
+			"types": "./src/eco/eco.ts",
+			"default": "./src/eco/eco.ts"
 		},
 		"./declarations": {
 			"types": "./src/declarations.d.ts"
