--- a/examples/starter-ghtml/package.json
+++ b/examples/starter-ghtml/package.json
@@ -14,6 +14,7 @@
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
 		"@ecopages/scripts-injector": "latest",
-		"tailwindcss": "^3.4.19"
+		"@tailwindcss/postcss": "^4.0.0",
+		"tailwindcss": "^4.0.0"
 	}
 }
