--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -13,9 +13,10 @@
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
 		"@ecopages/react": "npm:@jsr/ecopages__react@latest",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"tailwindcss": "^3.4.19"
+		"tailwindcss": "^4.0.0"
 	},
 	"dependencies": {
 		"react": "^19",
