--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
 		"packages/processors/*",
 		"playground/*",
 		"e2e/fixtures/*",
-		"apps/*",
-		"examples/*"
+		"apps/*"
 	],
 	"type": "module"
 }
