--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -34,6 +34,9 @@
 	},
 	"dependencies": {
 		"@ecopages/core": "workspace:*",
-		"idiomorph": "^0.7.3"
+		"morphdom": "^2.7.8"
+	},
+	"devDependencies": {
+		"@types/morphdom": "^2.4.2"
 	}
 }
