Feature/browser router enhancements (#123)
* feat(router): enhance EcoRouter with morphdom-based DOM diffing and View Transitions support. Updated EcoRouter to intercept link clicks and perform client-side navigation using morphdom for efficient DOM diffing.

Added support for View Transitions API, allowing smoother transitions between pages. Improved event handling for link clicks and popstate events using composedPath for Shadow DOM compatibility. Enhanced navigation methods to handle programmatic navigation and history updates. Updated DOMSwapper to preload stylesheets and manage persisted elements during transitions. Refactored HTML parsing to include base tag for URL resolution. Adjusted default options to enable View Transitions by default. fix(playground): simplify router initialization in base layout by removing explicit viewTransitions option in router creation, relying on default settings. refactor(playground): streamline post card components in index and post pages by integrating view transition attributes directly into post card elements for better transition handling. Implemented link prefetching with eager, hover, and viewport strategies in the browser router.

--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -34,6 +34,9 @@
 	},
 	"dependencies": {
 		"@ecopages/core": "workspace:*",
-		"morphdom": "^2.7.4"
+		"morphdom": "^2.7.8"
+	},
+	"devDependencies": {
+		"@types/morphdom": "^2.4.2"
 	}
 }
