fix(react-router): fixed exports in jsr

--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -30,11 +30,10 @@
 		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
-	"peerDependencies": {
+	"dependencies": {
 		"react": "^19"
 	},
 	"devDependencies": {
-		"@types/react": "^19",
-		"react": "^19"
+		"@types/react": "^19"
 	}
 }
