--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/react-router",
-	"version": "0.1.68",
+	"version": "0.1.69",
 	"description": "Client-side SPA router for EcoPages React applications",
 	"keywords": [
 		"ecopages",
@@ -31,15 +31,11 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*"
+		"@ecopages/react": "workspace:*",
+		"react": "^19"
 	},
 	"devDependencies": {
+		"react": "^19",
 		"@types/react": "^19"
-	},
-	"dependencies": {
-		"react": "^19"
-	},
-	"overrides": {
-		"react": "^19"
 	}
 }
