--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -30,6 +30,7 @@
 		"react-dom": "^19"
 	},
 	"dependencies": {
+		"@ecopages/logger": "^0.2.2",
 		"@mdx-js/esbuild": "^3.0.1",
 		"@mdx-js/mdx": "^3.1.0"
 	},
