feat(core): add HttpError class with factory methods, toJSON/toResponse serialization, exported via @ecopages/core/errors

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -119,6 +119,10 @@
 		"./hash": {
 			"import": "./src/utils/hash.ts",
 			"require": "./src/utils/hash.ts"
+		},
+		"./errors": {
+			"types": "./src/errors/index.ts",
+			"default": "./src/errors/index.ts"
 		}
 	}
 }
