--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,10 @@
 		"ghtml": "^3.1.2"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"arktype": "^2.1.29",
+		"valibot": "^1.2.0",
+		"zod": "^4.3.6"
 	},
 	"exports": {
 		".": {
