Feature/127 explicit routing (#129)
* feat(core): add HttpError class with factory methods, toJSON/toResponse serialization, exported via @ecopages/core/errors

* refactor(core): convert createHtmlResponse and buildHeaders to protected methods on IntegrationRenderer, add createRenderError using HttpError, update all integration renderers to use instance methods, add renderToResponse and tests for
integratiosn

* feat(core): implement app.static() for explicit SSG view registration

Add StaticRoute type and static() method to AbstractApplicationAdapter. Create ExplicitStaticRouteMatcher for dev-time dynamic rendering. Update StaticSiteGenerator to generate explicit static routes at build time. Add getRendererByIntegration() to RouteRendererFactory. Re-export EcoPageComponent from public-types. Includes unit tests for ExplicitStaticRouteMatcher (24 tests) and integration tests for app.static() with real HTTP requests (8 tests). Supports both static paths (/about) and dynamic paths (/blog/:slug) with staticPaths/staticProps for data fetching.

* feat(core): implement route groups with middleware

Add middleware system and route groups for explicit routing API. Middleware follows chain-of-responsibility pattern with next() function for execution flow control. Route groups enable shared URL prefix and middleware for multiple routes via app.group() method. Includes full TypeScript support with generic types for request/server context. Added 7 middleware tests covering single/chained execution and short-circuiting. Added 10 route groups tests covering prefix handling, group middleware, and multiple HTTP methods. All 558 tests pass.

* feat(core): add global error handler support for centralized error management

* feat(core): implement schema validation service and tests for request data validation

* feat(core): add RouteGroupOptions interface and update route handlers to support schema validation

* feat(docs): add explicit routing documentation and update config

* feat

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,10 @@
 		"ghtml": "^3.1.2"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"arktype": "^2.1.29",
+		"valibot": "^1.2.0",
+		"zod": "^4.3.6"
 	},
 	"exports": {
 		".": {
@@ -119,6 +122,10 @@
 		"./hash": {
 			"import": "./src/utils/hash.ts",
 			"require": "./src/utils/hash.ts"
+		},
+		"./errors": {
+			"types": "./src/errors/index.ts",
+			"default": "./src/errors/index.ts"
 		}
 	}
 }
