feat(core): pages directory is not mandatory anymore. Set default public directory to root.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
 		"build:playground-global": "bun run --filter @ecopages/playground-global build",
 		"start:playground-global": "bun run --filter @ecopages/playground-global start",
 		"preview:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global preview",
+		"watch:dev:playground-explicit-routes": "bun run --elide-lines 0 --filter @ecopages/playground-explicit-routes watch:dev",
+		"hot:dev:playground-explicit-routes": "bun run --elide-lines 0 --filter @ecopages/playground-explicit-routes hot:dev",
+		"dev:playground-explicit-routes": "bun run --elide-lines 0 --filter @ecopages/playground-explicit-routes dev",
+		"build:playground-explicit-routes": "bun run --filter @ecopages/playground-explicit-routes build",
+		"start:playground-explicit-routes": "bun run --filter @ecopages/playground-explicit-routes start",
+		"preview:playground-explicit-routes": "bun run --elide-lines 0 --filter @ecopages/playground-explicit-routes preview",
 		"watch:dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace watch:dev",
 		"hot:dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace hot:dev",
 		"dev:playground-namespace": "bun run --elide-lines 0 --filter @ecopages/playground-namespace dev",
