refactor(core): reimplement eco-component-meta-plugin using AST parsing with oxc-parser for reliable metadata injection and update related tests.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,8 @@
 		"@ecopages/logger": "latest",
 		"@ecopages/scripts-injector": "^0.1.1",
 		"chokidar": "^4.0.3",
-		"ghtml": "^3.1.2"
+		"ghtml": "^4.0.2",
+		"oxc-parser": "^0.110.0"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
