feat(docs): add routing patterns documentation and update explicit routing references

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,8 +3,9 @@
 	"private": true,
 	"scripts": {
 		"start": "bun run app.ts",
-		"dev": "bun run app.ts --dev",
-		"build": "bun run app.ts --build",
+		"generate:llms": "bun run scripts/generate-llm-docs.ts",
+		"dev": "bun run generate:llms && bun run app.ts --dev",
+		"build": "bun run generate:llms && bun run app.ts --build",
 		"preview": "bun run app.ts --preview",
 		"watch:dev": "bun --watch run app.ts --dev"
 	},
