--- a/playground/explicit-routes/package.json
+++ b/playground/explicit-routes/package.json
@@ -2,11 +2,11 @@
 	"name": "@ecopages/playground-explicit-routes",
 	"private": true,
 	"scripts": {
-		"start": "bun run --preload ./eco.config.ts app.ts",
-		"dev": "bun run --preload ./eco.config.ts app.ts --dev",
-		"build": "bun run --preload ./eco.config.ts app.ts --build",
-		"preview": "bun run --preload ./eco.config.ts app.ts --preview",
-		"watch:dev": "bun --watch run --preload ./eco.config.ts app.ts --dev"
+		"start": "bun run app.ts",
+		"dev": "bun run app.ts --dev",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
+		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
