feat(ecopages): Introduce the ecopages meta-package as a universal entry point with its CLI.

--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"description": "Codemods for migrating ecopages to latest patterns",
 	"type": "module",
+	"private": true,
 	"main": "src/transforms/index.ts",
 	"scripts": {
 		"transform:pages": "jscodeshift -t src/transforms/migrate-to-eco-page.ts --parser tsx",
