--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,3 +67,15 @@ jobs:
 
             - name: Publish package @ecopages/react-router
               run: bun run --filter @ecopages/react-router release:jsr
+
+            - name: Generate ecopages meta-package
+              run: bun scripts/generate-meta-package.ts
+
+            - name: Setup Node.js for NPM Publish
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '24'
+                  registry-url: 'https://registry.npmjs.org'
+
+            - name: Publish ecopages to NPM
+              run: npm publish --access public --provenance --workspace packages/ecopages
