--- a/npm/ecopages/package.json
+++ b/npm/ecopages/package.json
@@ -8,7 +8,7 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/ecopages/ecopages.git",
-		"directory": "packages/ecopages"
+		"directory": "npm/ecopages"
 	},
 	"homepage": "https://github.com/ecopages/ecopages#readme",
 	"bugs": {
