feat(postcss-processor): improved tailwind v4 preset

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -131,6 +131,10 @@
 		"./errors": {
 			"types": "./src/errors/index.ts",
 			"default": "./src/errors/index.ts"
+		},
+		"./integrations/ghtml": {
+			"types": "./src/integrations/ghtml/ghtml.plugin.ts",
+			"default": "./src/integrations/ghtml/ghtml.plugin.ts"
 		}
 	}
 }
