--- a/npm/ecopages/package.json
+++ b/npm/ecopages/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ecopages",
-	"version": "0.1.91",
+	"version": "0.1.92",
 	"description": "Universal entry point for Ecopages",
 	"type": "module",
 	"license": "MIT",
@@ -265,23 +265,24 @@
 		}
 	},
 	"dependencies": {
+		"commander": "^12.1.0",
 		"tiged": "^2.12.7",
 		"@ecopages/logger": "^0.2.2"
 	},
 	"devDependencies": {
-		"@ecopages/react-router": "npm:@jsr/ecopages__react-router@0.1.91",
-		"@ecopages/bun-mdx-kitajs-loader": "npm:@jsr/ecopages__bun-mdx-kitajs-loader@0.1.91",
-		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@0.1.91",
-		"@ecopages/file-system": "npm:@jsr/ecopages__file-system@0.1.91",
-		"@ecopages/browser-router": "npm:@jsr/ecopages__browser-router@0.1.91",
-		"@ecopages/image-processor": "npm:@jsr/ecopages__image-processor@0.1.91",
-		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@0.1.91",
-		"@ecopages/react": "npm:@jsr/ecopages__react@0.1.91",
-		"@ecopages/lit": "npm:@jsr/ecopages__lit@0.1.91",
-		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@0.1.91",
-		"@ecopages/mdx": "npm:@jsr/ecopages__mdx@0.1.91",
-		"@ecopages/bun-inline-css-plugin": "npm:@jsr/ecopages__bun-inline-css-plugin@0.1.91",
-		"@ecopages/core": "npm:@jsr/ecopages__core@0.1.91"
+		"@ecopages/react-router": "npm:@jsr/ecopages__react-router@0.1.92",
+		"@ecopages/bun-mdx-kitajs-loader": "npm:@jsr/ecopages__bun-mdx-kitajs-loader@0.1.92",
+		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@0.1.92",
+		"@ecopages/file-system": "npm:@jsr/ecopages__file-system@0.1.92",
+		"@ecopages/browser-router": "npm:@jsr/ecopages__browser-router@0.1.92",
+		"@ecopages/image-processor": "npm:@jsr/ecopages__image-processor@0.1.92",
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@0.1.92",
+		"@ecopages/react": "npm:@jsr/ecopages__react@0.1.92",
+		"@ecopages/lit": "npm:@jsr/ecopages__lit@0.1.92",
+		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@0.1.92",
+		"@ecopages/mdx": "npm:@jsr/ecopages__mdx@0.1.92",
+		"@ecopages/bun-inline-css-plugin": "npm:@jsr/ecopages__bun-inline-css-plugin@0.1.92",
+		"@ecopages/core": "npm:@jsr/ecopages__core@0.1.92"
 	},
 	"peerDependencies": {
 		"bun-types": "latest",
